application delete proposal

--- a/main.tex
+++ b/main.tex
@@ -469,12 +469,12 @@ sort=symbolpi, type=symbolslist
 }
 \newglossaryentry{symb:freq_modulation}{
 name=$\Delta f_\mathit{rf}$,
-description={Rf frequency modulation on the cavity rf frequency for the phase shift method, rf frequency detune on the cavity rf frequency for the frequency beating method},
+description={Rf frequency modulation on the cavity rf frequency for the phase shift method, rf frequency detuning on the cavity rf frequency for the frequency beating method},
 sort=symbolpi, type=symbolslist
 }
 \newglossaryentry{symb:freq_modulation1}{
 name=$\Delta f_\mathit{syn}$,
-description={Rf frequency modulation on the synchronization frequency for the phase shift method, rf frequency detune on the synchronization frequency for the frequency beating method},
+description={Rf frequency modulation on the synchronization frequency for the phase shift method, rf frequency detuning on the synchronization frequency for the frequency beating method},
 sort=symbolpi, type=symbolslist
 }
 \newglossaryentry{symb:period_phase}{
