--- a/reference.bib
+++ b/reference.bib
@@ -41,11 +41,11 @@
 	year = {2011}
 }
 
-@misc{ezura_beam-dynamics_2008,
+@article{ezura_beam-dynamics_2008,
 	title = {Beam-{Dynamics} {View} of {RF} {Phase} {Adjustment} for {Synchronizing} {J}-{PARC} {RCS} with {MR} or {MLF}},
 	url = {http://ccdb5fs.kek.jp/tiff/2008/0826/0826001.pdf},
 	urldate = {2016-08-23},
-	publisher = {KEK Internal},
+	journal = {KEK Internal Document},
 	author = {Ezura, E. and Yoshii, M. and Tamura, F. and Schnase, A.},
 	year = {2008},
 	file = {[PDF] kek.jp:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\VBW3QNJJ\\Ezura et al. - 2008 - Beam-Dynamics View of RF Phase Adjustment for Sync.pdf:application/pdf}
@@ -122,7 +122,7 @@
 	keywords = {Science / Mechanics / General, Science / Physics / Atomic \& Molecular, Science / Physics / General, Science / Physics / Nuclear, Science / Weights \& Measures, Technology \& Engineering / Measurement}
 }
 
-@misc{_accelerators_????,
+@misc{noauthor_accelerators_nodate,
 	title = {Accelerators for {Society}},
 	url = {http://www.accelerators-for-society.org/about-accelerators/index.php?id=21#linac},
 	urldate = {2016-09-20},
@@ -139,7 +139,7 @@
 	file = {[PDF] cern.ch:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\5XKMB6KK\\Barbalat - 1994 - Applications of particle accelerators.pdf:application/pdf}
 }
 
-@misc{_fair_2011,
+@misc{noauthor_fair_2011,
 	title = {{FAIR} - {Facility} for {Antiproton} and {Ion} {Research}},
 	url = {https://www.gsi.de//forschungbeschleuniger/fair.htm},
 	abstract = {FAIR – das zukünftige Beschleunigerzentrum In den nächsten Jahren wird bei GSI das neue internationale Beschleunigerzentrum FAIR entstehen, eines der größten Forschungsvorhaben weltweit. An FAIR wird eine nie dagewesene Vielfalt an Experimenten möglich sein, durch die Physiker aus aller Welt neFAIR wird Teilchenstrahlen mit bisher unerreichter Intensität und Qualität liefern. Ihr Herzstück ist ein Ringbeschleuniger mit einem Umfang von 1100 Metern. An diesen schließt sich ein komplexes System von Speicherringen und Experimentierstationen an. Die bereits existierenden GSI-Beschleuniger die},
@@ -150,7 +150,7 @@
 	file = {Snapshot:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\ABZ5CDSE\\fair.html:text/html}
 }
 
-@misc{_gsi_2011,
+@misc{noauthor_gsi_2011,
 	title = {{GSI} {Helmholtzzentrum} für {Schwerionenforschung} {GmbH}},
 	url = {https://www.gsi.de//start/aktuelles.htm},
 	abstract = {GSI Helmholtzzentrum für Schwerionenforschung Das GSI Helmholtzzentrum für Schwerionenforschung in Darmstadt betreibt eine große, weltweit einmalige Beschleunigeranlage für Ionen. Forscherinnen und Forscher aus aller Welt nutzen die Anlage für Experimente, um neue Erkenntnisse über den Aufbau dIn den nächsten Jahren wird bei GSI das neue internationale Beschleunigerzentrum FAIR entstehen, eines der größten Forschungsvorhaben weltweit. An FAIR wird eine nie dagewesene Vielfalt an Experimenten möglich sein, durch die Physiker aus aller Welt neue Einblicke in den Aufbau der Materie und die EBei GSI wurde eine bahnbrechende neue Krebstherapie entwickelt. Grundlage hierfür waren langjährige Forschungsarbeiten und die große Beschleunigeranlage für Ionenstrahlen von GSI. Der Vorteil der neuen Therapie liegt darin, dass der Ionenstrahl seine größte Wirkung im Tumor erzielt und das umliegendChemische Elemente entstehen in Sternen und in Sternexplosionen. Sie sind der Stoff, aus dem die gesamte Materie - auch jedes Atom unseres Körpers - aufgebaut ist. Im Universum existiert noch eine Vielzahl von Atomen, die auf der Erde nicht vorkommen. Die Forscher bei GSI versuchen neue, bisher unbe},
@@ -192,11 +192,11 @@
 	file = {[PDF] tu-darmstadt.de:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\3MG6UJ9P\\Grieser - 2015 - Beam phase feedback in a heavy-ion synchrotron wit.pdf:application/pdf;Snapshot:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\Q9C4XFZH\\4634.html:text/html}
 }
 
-@misc{mandakovic_fair_????,
+@article{mandakovic_fair_nodate,
 	title = {{FAIR} {Fast} {Beam} {Abort} {System}},
 	url = {https://fair-wiki.gsi.de/foswiki/pub/FC2WG/FairC2WGMinutes/20151021_Fast_Beam_Abort_System_Mandakovic.pdf},
 	urldate = {2016-09-21},
-	publisher = {GSI Internal Document},
+	journal = {GSI Internal Document},
 	author = {Mandakovic, M.},
 	file = {Fast Beam Abort System @ FAIR - 20151021_Fast_Beam_Abort_System_Mandakovic.pdf:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\FG2FZPNT\\20151021_Fast_Beam_Abort_System_Mandakovic.html:text/html}
 }
@@ -254,7 +254,7 @@
 	year = {1984}
 }
 
-@misc{barletta_overview_????,
+@misc{barletta_overview_nodate,
 	title = {Overview on {Magnetic} fields},
 	url = {http://uspas.fnal.gov/materials/12MSU/xverse_dynamics.pdf},
 	urldate = {2016-09-26},
@@ -272,9 +272,9 @@
 	file = {[PDF] cern.ch:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\DGHSRW6X\\Bovet et al. - 1970 - A selection of formulae and data useful for the de.pdf:application/pdf;Snapshot:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\RNE8AERM\\280305.html:text/html}
 }
 
-@misc{bai_concept_2016,
+@article{bai_concept_2016,
 	title = {Concept of the {FAIR} {Bunch} {To} {Bucket} {Transfer} {System}},
-	publisher = {GSI Internal Document},
+	journal = {GSI Internal Document},
 	author = {Bai, J. and Ferrand, T.},
 	year = {2016}
 }
@@ -289,9 +289,9 @@
 	file = {[PDF] inspirehep.net:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\K7ETQ2W4\\Böhne et al. - 1986 - Status report on the SISESR project at GSI.pdf:application/pdf}
 }
 
-@misc{blell_injection_2014,
+@article{blell_injection_2014,
 	title = {Injection and {Extraction} {Components} of {SIS} 100 / 300},
-	publisher = {GSI Internal Document},
+	journal = {GSI Internal Document},
 	author = {Blell, U.},
 	year = {2014}
 }
@@ -335,11 +335,11 @@
 	file = {TimingSystemEvent < Timing < Belwiki:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\94RXV26G\\TimingSystemEvent.html:text/html}
 }
 
-@misc{beck_general_????,
+@article{beck_general_nodate,
 	title = {The {General} {Machine} {Timing} {System} for {FAIR} and {GSI}},
 	url = {https://www-acc.gsi.de/wiki/pub/Timing/TimingSystemDocuments/GMT_Description_v3-1.pdf},
 	urldate = {2016-09-26},
-	publisher = {GSI Internal Document},
+	journal = {GSI Internal Document},
 	author = {Beck, D. and Kreider, M. and Prados, C. and Terpstra, W. and Rauch, S. and Zweig, M.},
 	file = {GMT_Description_v3-1 - GMT_Description_v3-1.pdf:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\ZASQAR8R\\GMT_Description_v3-1.html:text/html}
 }
@@ -386,7 +386,7 @@
 }
 
 @inproceedings{ferrand_system_2015,
-	title = {System {Desogm} for a {Deterministic} {Bunch}-to-{Bucket} {Transfer}},
+	title = {System {Design} for a {Deterministic} {Bunch}-to-{Bucket} {Transfer}},
 	url = {http://accelconf.web.cern.ch/AccelConf/IPAC2015/papers/wepma024.pdf},
 	urldate = {2016-09-27},
 	booktitle = {Proc. of {IPAC}},
@@ -415,16 +415,16 @@
 	file = {White Rabbit Technology as Basis for the FAIR Timing System - PHN-ACC-RD-45.pdf:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\TT7TI7ZF\\PHN-ACC-RD-45.html:text/html}
 }
 
-@misc{liebermann_fair_2013,
+@article{liebermann_fair_2013,
 	title = {{FAIR} and {GSI} {Reference} {Cycles} for {SIS}18},
-	publisher = {GSI Internal Document},
+	journal = {GSI Internal Document},
 	author = {Liebermann, H. and Ondreka, D.},
 	year = {2013}
 }
 
-@misc{liebermann_sis100_2013,
+@article{liebermann_sis100_2013,
 	title = {{SIS}100 {Cycles}},
-	publisher = {GSI Internal Document},
+	journal = {GSI Internal Document},
 	author = {Liebermann, H. and Ondreka, D.},
 	year = {2013}
 }
@@ -510,34 +510,34 @@
 	pages = {71ep}
 }
 
-@misc{laier_funktional-spezifikation_2011,
+@article{laier_funktional-spezifikation_2011,
 	title = {Funktional-{Spezifikation} {DDS}},
-	publisher = {GSI Internal Document},
+	journal = {GSI Internal Document},
 	author = {Laier, U.},
 	year = {2011}
 }
 
-@phdthesis{ferrand_development_????,
+@phdthesis{ferrand_development_nodate,
 	title = {Development of the {LLRF} {System} for a deterministic {Bunch}-to-{Bucket} {Transfer} for {FAIR}},
 	school = {Technical University Darmstadt},
 	author = {Ferrand, T.}
 }
 
-@misc{_statistical_????,
+@misc{noauthor_statistical_nodate,
 	title = {Statistical and numerical {Tools}  in {Astrophysics} {I}. {Accuracy} and precision},
 	url = {http://www.astro.lu.se/Education/utb/ASTM11/lecture2.pdf},
 	urldate = {2016-09-27},
 	file = {Microsoft PowerPoint - statistics1.ppt - lecture2.pdf:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\EJ4PBZ99\\lecture2.html:text/html}
 }
 
-@misc{prados_testing_2016,
+@article{prados_testing_2016,
 	title = {Testing the {WR} {Network} of the {FAIR} {General} {Machine} {Timing} {System}},
-	publisher = {GSI Internal Document},
+	journal = {GSI Internal Document},
 	author = {Prados, C. and Bai, J.},
 	year = {2016}
 }
 
-@misc{_calculating_2012,
+@misc{noauthor_calculating_2012,
 	title = {Calculating {Optical} {Fiber} {Latency}},
 	url = {http://www.m2optics.com/blog/bid/70587/Calculating-Optical-Fiber-Latency},
 	year = {2012}
@@ -609,30 +609,30 @@
 	file = {PZS - SIS/ESR-Pulszentrale - Google-Suche:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\XEZE6DX3\\www.google.de.html:text/html}
 }
 
-@misc{_lhc_????,
+@misc{noauthor_lhc_nodate,
 	title = {{LHC} {Glossary} {Definition}},
 	url = {http://www.lhcportal.com/Portal/Info/LHCGlossaryDef.pdf}
 }
 
-@misc{__????
+@misc{noauthor_notitle_nodate
 }
 
-@misc{_j-parc_????,
+@misc{noauthor_j-parc_nodate,
 	title = {J-{PARC}},
 	url = {https://www.kek.jp/en/Facility/ACCL/J-PARC/}
 }
 
-@misc{_brookhaven_????,
+@misc{noauthor_brookhaven_nodate,
 	title = {Brookhaven {National} {Laboratory}},
 	url = {https://en.wikipedia.org/wiki/Brookhaven_national_laboratory}
 }
 
-@misc{_fermi_????,
+@misc{noauthor_fermi_nodate,
 	title = {Fermi {National} {Accelerator} {Laboratory}},
 	url = {http://www.fnal.gov/pub/science/particle-accelerators/accelerator-complex.html}
 }
 
-@misc{_institute_????,
+@misc{noauthor_institute_nodate,
 	title = {Institute of {Modern} {Physics} of the {Chinese} {Academy} of {Sciences}},
 	url = {http://english.imp.cas.cn/au/bi/201312/t20131231_115141.html}
 }
@@ -678,7 +678,7 @@
 	file = {[PDF] anl.gov:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\22DK57IQ\\Wang - 1991 - Design of kicker magnet and power supply unit for .pdf:application/pdf}
 }
 
-@misc{_particle_????,
+@misc{noauthor_particle_nodate,
 	title = {Particle {Accelerator}},
 	url = {https://en.wikipedia.org/wiki/Particle_accelerator}
 }
@@ -692,18 +692,47 @@
 	year = {1999}
 }
 
-@misc{ros_sis18_2008,
+@article{ros_sis18_2008,
 	title = {{SIS}18 {Sektoren} {Technische} {Zeichnungen} und {Fotografien}},
-	publisher = {GSI Internal Document},
+	journal = {GSI Internal Document},
 	author = {Roß, J.},
 	month = jan,
 	year = {2008}
 }
 
-@misc{blell_detailed_2014,
+@article{blell_detailed_2014,
 	title = {Detailed {Specification} of the {SIS}100 {Injection} {Kicker} {Magnets} and their {Pulse} {Power} {Supplies}.},
-	publisher = {GSI Internal Document},
+	journal = {GSI Internal Document},
 	author = {Blell, U.},
 	month = nov,
 	year = {2014}
+}
+
+@misc{klingbeil_detailed_2013,
+	title = {Detailed {Specification} on the {LLRF} {DSP} {System} for {FAIR} {Ring} {RF} {Systems}},
+	publisher = {GSI Detailed Specification F-DS-RF-11e\_DSP-System},
+	author = {Klingbeil, H.},
+	year = {2013}
+}
+
+@misc{moritz_common_2012,
+	title = {Common {Specification} on the {Bunch} {Phase} {Timing} {System} ({BuTiS})},
+	publisher = {GSI Common Specification F-CS-RF-14e BuTiS},
+	author = {Moritz, P.},
+	year = {2012}
+}
+
+@misc{kreider_receiver_2014,
+	title = {Receiver {Nodes} of the {General} {Machine} {Timing} {System} for {FAIR} and {GSI}},
+	publisher = {GSI Internal Document},
+	author = {Kreider, M. and Bai, J. and Beck, D. and Prados, C. and Terpstra, W. and Rauch, S. and Zweig, M.},
+	year = {2014}
+}
+
+@misc{prados_white_2011,
+	title = {White {Rabbit} and {Robustness}},
+	url = {file:///C:/Users/Gilgil/Downloads/WhiteRabbitAndRobustness.pdf},
+	publisher = {GSI Internal Document},
+	author = {Prados, C. and Lipinski, M.},
+	year = {2011}
 }
