--- a/reference.bib
+++ b/reference.bib
@@ -460,7 +460,6 @@
 	urldate = {2016-09-27},
 	author = {Steck, M. and Dimopoulou, C. and Franzke, B. and Gorda, O. and Katayama, T. and Nolden, F. and Schreiber, G. and Möhl, D. and Stassen, R. and Meshkov, I. N. and al., et},
 	year = {2011},
-	pages = {140},
 	file = {[PDF] cern.ch:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\6T7K84FM\\Steck et al. - 2011 - Demonstration of Longitudinal Stacking in the ESR .pdf:application/pdf}
 }
 
@@ -506,8 +505,7 @@
 	shorttitle = {An introduction to error analysis},
 	journal = {Mill Valley, CA: Anonymous University Science Books},
 	author = {Taylor, J. R.},
-	year = {1982},
-	pages = {71ep}
+	year = {1982}
 }
 
 @article{laier_funktional-spezifikation_2011,
@@ -518,7 +516,7 @@
 }
 
 @phdthesis{ferrand_development_nodate,
-	title = {Development of the {LLRF} {System} for a deterministic {Bunch}-to-{Bucket} {Transfer} for {FAIR}},
+	title = {Development of the {LLRF} {System} for a deterministic {Bunch}-to-{Bucket} {Transfer} for {FAIR} ({Unpublished} doctoral thesis)},
 	school = {Technical University Darmstadt},
 	author = {Ferrand, T.}
 }
@@ -735,4 +733,17 @@
 	publisher = {GSI Internal Document},
 	author = {Prados, C. and Lipinski, M.},
 	year = {2011}
+}
+
+@phdthesis{prados_wr_nodate,
+	title = {{WR} network ({Unpublished} doctoral thesis)},
+	school = {Technical University Darmstadt},
+	author = {Prados, C.}
+}
+
+@misc{terpstra_timing_2013,
+	title = {Timing {Receiver}: {Event}-{Condition}-{Action} ({ECA}) {Unit} {Design}},
+	publisher = {GSI Internal Document},
+	author = {Terpstra, W.},
+	year = {2013}
 }
